--- a/stores-page.html
+++ b/stores-page.html
@@ -55,59 +55,59 @@ Developer: Sergio Pacheco
             <div id = "screenOverlay">&nbsp;</div>
 
             <div id = "storeSection" class = "container-fluid mt-4">
-                <h2 class = "section-header mb-0">Stores</h2>
+                <h2 class = "section-header mb-0">Retail Stores</h2>
                 <div class = "location-divider">
                     <span><img alt = "US Flag" src = "images/svg/united-states-flag.svg" class = "location-flag"></span>
                     USA
                 </div>
                 <div class = "row text-center">
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                 </div>
 
@@ -117,28 +117,28 @@ Developer: Sergio Pacheco
                 </div>
                 <div class = "row text-center">
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                     <span class = "col-6 col-md-4 col-lg-3 mt-3">
-                        <a href = "" style = "color: #000; border: none;">Store Example</a>
+                        <a href = "">Store Example</a>
                     </span>
                 </div>
             </div>
