--- a/stores-page.html
+++ b/stores-page.html
@@ -73,9 +73,12 @@ Developer: Sergio Pacheco
             </div>
         </div>
 
+        <script>
+            createLists();
+        </script>
+
         <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
-
     </body>
 
     <!-- Custom Site JS -->
