--- a/stores-page.html
+++ b/stores-page.html
@@ -77,7 +77,7 @@ Developer: Sergio Pacheco
 
     <!-- Call to Function that Populates the Store Lists (Function Found in populate-stores-list.js) -->
     <script>
-        createLists();
+        $(document).ready(createLists());
     </script>
 
     <!-- Custom Site JS -->
