--- a/global-header.html
+++ b/global-header.html
@@ -51,7 +51,7 @@ Developer: Sergio Pacheco
                 </span>
             </a>
 
-            <button class = "hamburger navbar-toggler" type = "button" data-bs-toggle = "collapse" data-bs-target = "#mobileNav" aria-controls = "mobileNav" aria-expanded = "false" aria-label = "Toggle mobile navigation">
+            <button class = "hamburger navbar-toggler" type = "button" data-bs-toggle = "collapse" data-bs-target = "#mobileNav" aria-controls = "mobileNav" aria-expanded = "false" aria-label = "Toggle navigation">
                 <div class = "bar1"></div>
                 <div class = "bar2"></div>
                 <div class = "bar3"></div>
