--- a/global-header.html
+++ b/global-header.html
@@ -7,7 +7,7 @@ Developer: Sergio Pacheco
     const screenOverlay = document.getElementById("screenOverlay");
     while(document.getElementById('mobileNav').classList.contains('collapsing'))
     {
-        body.style.pointerEvents = "none";
+        document.body.style.pointerEvents = "none";
     }
     $(".hamburger").click(function () 
     {
