--- a/community-images.html
+++ b/community-images.html
@@ -20,7 +20,7 @@ Developer: Sergio Pacheco
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
         
         <!-- Custom Site CSS -->
-        <link rel = "stylesheet" href = "css/site-styling.css">
+        <link rel = "stylesheet" href = "css/site-styling.min.css">
 
         <!-- AOS CSS Animations Includes-->
         <link href = "https://unpkg.com/aos@2.3.1/dist/aos.css" rel = "stylesheet">
@@ -150,5 +150,5 @@ Developer: Sergio Pacheco
     </body>
 
     <!-- Custom Site JS -->
-    <script src = "js/site-js.js"></script>
+    <script src = "js/site-js.min.js"></script>
 </html>
