--- a/frozen-feast.html
+++ b/frozen-feast.html
@@ -24,7 +24,7 @@ Developer: Sergio Pacheco
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         
         <!-- Custom Site CSS -->
-        <link rel = "stylesheet" href = "css/site-styling.css">
+        <link rel = "stylesheet" href = "css/site-styling.min.css">
 
         <!-- AOS CSS Animations Includes-->
         <link href = "https://unpkg.com/aos@2.3.1/dist/aos.css" rel = "stylesheet">
@@ -183,6 +183,6 @@ Developer: Sergio Pacheco
     </body>
 
     <!-- Custom Site JS -->
-    <script src = "js/site-js.js"></script>
-    <script src = "js/store-popup.js"></script>
+    <script src = "js/site-js.min.js"></script>
+    <script src = "js/store-popup.min.js"></script>
 </html>
