--- a/rhodo-feast.html
+++ b/rhodo-feast.html
@@ -243,5 +243,5 @@ Developer: Sergio Pacheco
 
     <!-- Custom Site JS -->
     <script src = "js/site-js.min.js"></script>
-    <script src = "js/store-popup.min.js"></script>
+    <script src = "js/store-popup.js"></script>
 </html>
