--- a/amino-feast.html
+++ b/amino-feast.html
@@ -165,5 +165,5 @@ Developer: Sergio Pacheco
 
     <!-- Custom Site JS -->
     <script src = "js/site-js.min.js"></script>
-    <script src = "js/store-popup.js"></script>
+    <script src = "js/store-popup.min.js"></script>
 </html>
